fixed inline image overflow

--- a/src/scss/components/_image.scss
+++ b/src/scss/components/_image.scss
@@ -13,6 +13,7 @@ img {
 
   img {
     width: auto;
+    max-width: 100%;
   }
 }
 
